add-ontology-to-ontop: Ensure ontop container has all files it needs