@@ -2,12 +2,13 @@ package com.cmclinnovations.stack.services;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
+import org.apache.commons.io.FilenameUtils;
 
 import com.cmclinnovations.stack.clients.core.StackClient;
 import com.cmclinnovations.stack.clients.docker.DockerClient;
@@ -42,9 +43,7 @@ public final class OntopService extends ContainerService {
 
     private final String containerName;
     private final OntopEndpointConfig endpointConfig;
-    private final String mappingDir;
-    private final String ontologyDir;
-    private final String rulesDir;
+    private final List<String> configFiles;
     private final List<String> configDirs;
 
     public OntopService(String stackName, ServiceConfig config) {
@@ -52,10 +51,11 @@ public final class OntopService extends ContainerService {
 
         containerName = StackClient.removeStackName(getConfig().getName());
 
-        mappingDir = Path.of(getEnvironmentVariable(ONTOP_MAPPING_FILE)).getParent().toString();
-        ontologyDir = Path.of(getEnvironmentVariable(ONTOP_ONTOLOGY_FILE)).getParent().toString();
-        rulesDir = Path.of(getEnvironmentVariable(ONTOP_SPARQL_RULES_FILE)).getParent().toString();
-        configDirs = new ArrayList<>(new HashSet<>(Arrays.asList(mappingDir, ontologyDir, rulesDir)));
+        configFiles = List.of(getEnvironmentVariable(ONTOP_MAPPING_FILE), getEnvironmentVariable(ONTOP_ONTOLOGY_FILE),
+                getEnvironmentVariable(ONTOP_SPARQL_RULES_FILE));
+
+        configDirs = configFiles.stream().map(s -> Path.of(s).getParent().toString()).distinct()
+                .collect(Collectors.toList());
 
         endpointConfig = new OntopEndpointConfig(containerName, getHostName(), DEFAULT_PORT);
 
@@ -110,9 +110,27 @@ public final class OntopService extends ContainerService {
     @Override
     public void doPostStartUpConfiguration() {
         DockerClient dockerClient = DockerClient.getInstance();
-        dockerClient.createComplexCommand(dockerClient.getContainerId(containerName),
-                "chown", "ontop:ontop", String.join(" ", configDirs))
+        String containerId = dockerClient.getContainerId(containerName);
+        dockerClient.createComplexCommand(containerId, "chown", "ontop:ontop", String.join(" ", configDirs))
                 .withUser("root");
+
+        OntopClient ontopClient = OntopClient.getInstance();
+        configFiles.forEach(f -> {
+            if (!fileExists(f)) {
+                String extension = FilenameUtils.getExtension(f);
+                switch (extension) {
+                    case "obda":
+                        ontopClient.updateOBDA(null);
+                        break;
+                    case "toml":
+                        ontopClient.uploadRules(List.of());
+                        break;
+                    default:
+                        dockerClient.createComplexCommand(containerId, "touch", f).withUser("root").exec();
+                        break;
+                }
+            }
+        });
     }
 
     @Override
